--- a/tlatools/org.lamport.tlatools/pom.xml
+++ b/tlatools/org.lamport.tlatools/pom.xml
@@ -60,14 +60,10 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.2.5</version>
-        <dependencies>
-          <dependency>
-            <groupId>org.apache.maven.surefire</groupId>
-            <artifactId>surefire-junit47</artifactId>
-            <version>3.2.5</version>
-          </dependency>
-        </dependencies>
         <configuration>
+          <parallel>classes</parallel>
+          <threadCount>1</threadCount>
+          <perCoreThreadCount>true</perCoreThreadCount>
           <reuseForks>false</reuseForks>
         </configuration>
       </plugin>
