--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -94,11 +94,11 @@ jobs:
         # Number of commits to fetch. 0 indicates all history.
         # jgit task nested in customBuild.xml fails without history.
         fetch-depth: 0
-    - name: Set up JDK 11
+    - name: Set up JDK
       uses: actions/setup-java@v4
       with:
         distribution: adopt
-        java-version: 11
+        java-version: 23
     - name: Build & Test Eclipse Toolbox with Maven
       run: |
         ${{ matrix.MVN_COMMAND }}                                                                     \
